examples/parser/invalid/var_definition_inside_if.xana
def main() do
    if 0 do
        a :: int
    end
end